[package]
name = "simulcast-mpv"
description = "Tool to sync MPV players over the internet."
authors = ["rtldg <rtldg@protonmail.com>"]
repository = "https://github.com/rtldg/simulcast-mpv"
homepage = "https://github.com/rtldg/simulcast-mpv"
version = "2.1.1"
edition = "2021"
# "Why AGPL?" Because I thought it'd be funny.
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
	"client",
	"server"
]
client = [
	"dep:blake3",
	"dep:directories",
	"dep:interprocess",
	"dep:log-panics",
	"dep:rand",
	"dep:reqwest",
]
server = [
	"dep:chrono",
]

[profile.release]
lto = true
#strip = true
opt-level = "s"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["now", "alloc", "std", "winapi"], default-features = false, optional = true }
clap = { version = "4.5", features = ["derive", "unicode", "env", "wrap_help"] }
clap-verbosity-flag = "3"
directories = { version = "6", optional = true }
dotenvy = { version = "0.15" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

log-panics = { version = "2", features = ["with-backtrace"], optional = true }

http = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"], optional = true }

interprocess = { version = "2", optional = true }

futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

blake3 = { version = "1.8", optional = true }

log = { version = "0.4", features = ["std"] }
flexi_logger = { version = "=0.29", features = ["async"] } # locked for Rust 1.75 / Windows 7 support

rand = { version = "0.9", optional = true }

# Sub-dependencies locked for Rust 1.75 / Windows 7 support
litemap = "=0.7.4"
zerofrom = "=0.1.5"
