[package]
name = "simulcast-mpv"
description = "Tool to sync MPV players over the internet."
authors = ["rtldg <rtldg@protonmail.com>"]
repository = "https://github.com/rtldg/simulcast-mpv"
homepage = "https://github.com/rtldg/simulcast-mpv"
version = "3.0.0"
edition = "2021"
rust-version = "1.75"
# "Why AGPL?" Because I thought it'd be funny.
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
	"client",
	"server"
]
client = [
	"dep:aws-lc-rs",
	"dep:backtrace",
	"dep:base64",
	"dep:blake3",
	"dep:directories",
	"dep:idna_adapter",
	"dep:interprocess",
	"dep:log-panics",
	"dep:rand",
	"dep:reqwest",
	"dep:rustls",
]
server = [
	"dep:chrono",
]

[profile.release]
lto = true
#strip = true
opt-level = "s"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["now", "alloc", "std", "winapi"], default-features = false, optional = true }
clap = { version = "4.5", features = ["derive", "unicode", "env", "wrap_help"] }
clap-verbosity-flag = "3"
directories = { version = "6", optional = true }
dotenvy = { version = "0.15" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

backtrace = { version = "=0.3.74", optional = true } # locked for Rust 1.75 / Windows 7 support
log-panics = { version = "2", features = ["with-backtrace"], optional = true }

http = "1"
idna_adapter = { version = "=1.0.0", optional = true } # locked to 1.0.0 to prevent pulling in a ton of unicode bullshit
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"], optional = true }

interprocess = { version = "2", optional = true }

futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }

blake3 = { version = "1.8", optional = true }

log = { version = "0.4", features = ["std"] }
flexi_logger = { version = "=0.29", features = ["async"] } # locked for Rust 1.75 / Windows 7 support

semver = { version = "1", features = ["serde"] }

rand = { version = "0.9", optional = true }

aws-lc-rs = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

# Sub-dependencies locked for Rust 1.75 / Windows 7 support
indexmap = "=2.11.4"
litemap = "=0.7.4"
zerofrom = "=0.1.5"
# 0.24 will change the rust-version from 1.71 to 1.83
rustls = { version = "=0.23", optional = true }
